--- a/package.json
+++ b/package.json
@@ -1,27 +1,71 @@
 {
-	"name": "api",
-	"version": "1.0.0",
-	"description": "https://getstream.io/",
-	"scripts": {
-		"start": "cd dist && node server.js",
-		"watch": "nodemon start && npx babel src --watch --out-dir dist --ignore src/node_modules",
-		"build": "./build.sh"
-	},
-	"author": "nuclearglow",
-	"license": "",
-	"keywords": [
-		"BuBaK",
-		"API",
-		"Express",
-		"REST",
-		"Mongoose",
-		"MongoDB"
-	],
-	"dependencies": {
-		"@babel/cli": "^7.1.2"
-	},
-	"devDependencies": {
-		"@babel/core": "^7.1.2",
-		"@babel/preset-env": "^7.1.0"
-	}
+    "name": "bubak-api",
+    "version": "1.0.0",
+    "description": "Bubak REST API using Express, Mongoose, and MongoDB.",
+    "scripts": {
+        "build:server:once": "cross-env NODE_ENV=development webpack --config webpack.config.js",
+        "dev:server": "npm run build:server:once && npm-run-all --parallel nodemon:prod watch:server",
+        "watch:server": "cross-env NODE_ENV=development webpack --config webpack.config.js --watch",
+        "nodemon:prod": "cross-env NODE_ENV=development node-dev ./dist/server.js"
+    },
+    "author": "nuclearglow",
+    "license": "anarchy",
+    "keywords": [
+        "BuBaK",
+        "API",
+        "Express",
+        "REST",
+        "Mongoose",
+        "MongoDB"
+    ],
+    "repository": {
+        "type": "git",
+        "url": "git@github.com:nuclearglow/bubak-api.git"
+    },
+    "bugs": {
+        "url": "https://github.com/nuclearglow/bubak-api/issues"
+    },
+    "homepage": "https://github.com/nuclearglow/bubak-api#readme",
+    "dependencies": {
+        "async": "^2.6.0",
+        "axios": "^0.17.1",
+        "body-parser": "^1.18.2",
+        "compression": "^1.7.1",
+        "cors": "^2.8.4",
+        "dotenv": "^5.0.0",
+        "ejs": "^2.5.7",
+        "express": "^4.16.2",
+        "express-jwt": "^5.3.0",
+        "express-winston": "^3.0.0",
+        "mongoose": "^5.0.4",
+        "mongoose-bcrypt": "^1.5.0",
+        "mongoose-string-query": "^0.2.5",
+        "serve-favicon": "^2.4.5",
+        "validator": "^9.4.0",
+        "winston": "^2.4.0",
+        "winston-papertrail": "^1.0.5"
+    },
+    "devDependencies": {
+        "@babel/cli": "^7.1.2",
+        "@babel/core": "^7.1.2",
+        "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
+        "@babel/plugin-transform-regenerator": "^7.0.0",
+        "@babel/polyfill": "^7.0.0",
+        "@babel/preset-env": "^7.1.0",
+        "@babel/register": "^7.0.0",
+        "babel-eslint": "^10.0.1",
+        "babel-loader": "^8.0.4",
+        "clean-webpack-plugin": "^0.1.19",
+        "cross-env": "^5.2.0",
+        "eslint": "^5.6.1",
+        "eslint-config-airbnb-base": "^13.1.0",
+        "eslint-plugin-import": "^2.14.0",
+        "npm-run-all": "^4.1.3",
+        "prettier": "^1.10.2",
+        "prettierrc": "^0.0.0-5",
+        "webpack": "^4.20.2",
+        "webpack-cli": "^3.1.2",
+        "webpack-dev-server": "^3.1.9",
+        "webpack-node-externals": "^1.7.2"
+    }
 }
