working user stuff wip

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "mongoose": "^5.0.4",
         "mongoose-bcrypt": "^1.5.0",
         "mongoose-string-query": "^0.2.5",
+        "mongoose-timestamp": "^0.6.0",
         "serve-favicon": "^2.4.5",
         "validator": "^9.4.0",
         "winston": "^3.1.0"
