--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "dependencies": {
         "async": "^2.6.0",
         "axios": "^0.17.1",
-        "body-parser": "^1.18.2",
+        "body-parser": "^1.18.3",
+        "chalk": "^2.4.1",
         "compression": "^1.7.1",
         "cors": "^2.8.4",
         "dotenv": "^5.0.0",
