--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
         "ejs": "^2.5.7",
         "express": "^4.16.2",
         "express-jwt": "^5.3.0",
+        "express-unless": "^0.5.0",
         "express-winston": "^3.0.0",
+        "jsonwebtoken": "^8.3.0",
         "mongoose": "^5.3.4",
         "mongoose-bcrypt": "^1.5.0",
         "mongoose-string-query": "^0.2.5",
