--- a/package.json
+++ b/package.json
@@ -27,26 +27,20 @@
     },
     "homepage": "https://github.com/nuclearglow/bubak-api#readme",
     "dependencies": {
-        "async": "^2.6.0",
-        "axios": "^0.17.1",
         "body-parser": "^1.18.3",
         "chalk": "^2.4.1",
         "compression": "^1.7.1",
         "cors": "^2.8.4",
         "dotenv": "^5.0.0",
-        "ejs": "^2.5.7",
         "express": "^4.16.2",
-        "express-jwt": "^5.3.0",
         "express-unless": "^0.5.0",
-        "express-winston": "^3.0.0",
         "jsonwebtoken": "^8.3.0",
         "mongoose": "^5.3.4",
         "mongoose-bcrypt": "^1.5.0",
         "mongoose-string-query": "^0.2.5",
         "mongoose-timestamp": "^0.6.0",
         "serve-favicon": "^2.4.5",
-        "validator": "^9.4.0",
-        "winston": "^3.1.0"
+        "validator": "^9.4.0"
     },
     "devDependencies": {
         "@babel/cli": "^7.1.2",
