--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "scripts": {
         "build:server:once": "cross-env NODE_ENV=development webpack --config webpack.config.js",
         "watch:server": "cross-env NODE_ENV=development webpack --config webpack.config.js --watch",
-        "nodemon:dev": "cross-env NODE_ENV=development node-dev ./dist/server.js",
+        "nodemon:dev": "cross-env NODE_ENV=development nodemon --inspect ./dist/server.js",
         "start": "npm run build:server:once && npm-run-all --parallel nodemon:dev watch:server"
     },
     "author": "nuclearglow",
@@ -39,6 +39,7 @@
         "mongoose-bcrypt": "^1.5.0",
         "mongoose-string-query": "^0.2.5",
         "mongoose-timestamp": "^0.6.0",
+        "nodemailer": "^4.6.8",
         "serve-favicon": "^2.4.5",
         "validator": "^9.4.0"
     },
@@ -55,6 +56,7 @@
         "eslint": "^5.6.1",
         "eslint-config-airbnb-base": "^13.1.0",
         "eslint-plugin-import": "^2.14.0",
+        "nodemon": "^1.18.5",
         "npm-run-all": "^4.1.3",
         "prettier": "^1.10.2",
         "prettierrc": "^0.0.0-5",
