--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "express": "^4.16.2",
         "express-unless": "^0.5.0",
         "formidable": "^1.2.1",
+        "image-size": "^0.6.3",
         "jsonwebtoken": "^8.3.0",
         "moment": "^2.22.2",
         "mongoose": "^5.3.4",
